# django-stocks

./: .env  .env.example  .gitignore  Makefile  RABBITMQ_SETUP.md  README.md  TESTING.md  UV_README.md  docker-compose.yml  pyproject.toml  requirements.txt
api_service/: Dockerfile  api_service_api.http  entrypoint.sh  manage.py  requests.http
api_service/api/: models.py  rabbitmq_client.py  serializers.py  tasks.py  views.py
api_service/api/migrations/: 0002_auto_add_celery_fields.py
api_service/api_service/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
stock_service/: Dockerfile  entrypoint.sh  manage.py  setup.sh  stock_service_api.http
stock_service/stock_service/: settings.py  urls.py
stock_service/stocks/: __init__.py  apps.py  rabbitmq_consumer.py  rabbitmq_server.py  stock_callback.py  tests.py  views.py
stock_service/stocks/management/commands/: test_rabbitmq.py
